// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton snapshot test 1`] = `
<div>
  <div
    class="bg-accent animate-pulse rounded-md"
    data-slot="skeleton"
  />
</div>
`;

exports[`Skeleton snapshot test with custom className 1`] = `
<div>
  <div
    class="bg-accent animate-pulse rounded-md w-12 h-12 rounded-full"
    data-slot="skeleton"
  />
</div>
`;
